# microduck_maploc_rs

./: Cargo.toml  README.md  pyproject.toml
docs/: DESIGN.md  PLAN.md
examples/: bench_field.rs  dump_session.rs  live_track.rs  track_loop_closure.rs  track_session.rs  track_submaps.rs
sessions/: test_room_loop1.mdlg
src/: accumulator.rs  follower.rs  global_render.rs  grid.rs  lib.rs  loop_closer.rs  mcl.rs  mount.rs  optimizer.rs  planner.rs  pose_graph.rs  relocalize.rs  replay.rs  scan_matcher.rs  session.rs  stream.rs  submap.rs  submap_manager.rs  wire.rs
tools/: calibrate_tof.py  live_view.py  record_session.py  replay_session.py
